--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
     "assets": "rsync -vruz assets/ public/",
 
     "build": "concurrently \"yarn views\" \"yarn styles\" \"yarn scripts -p\" \"yarn assets\"",
-    "start": "concurrently --kill-others \"yarn views-watch\" \"yarn styles-watch\" \"yarn scripts-watch\" \"php -S localhost:8080 -t public\""
+    "start": "concurrently --kill-others \"yarn views-watch\" \"yarn styles-watch\" \"yarn scripts-watch\" \"php -S localhost:8080 -t public\"",
+
+    "deploy": "yarn build && git subtree push --prefix public origin master"
   },
   "repository": {
     "type": "git",
