--- a/package.json
+++ b/package.json
@@ -6,26 +6,32 @@
     "babel-preset-env": "^1.2.1"
   },
   "devDependencies": {
+    "autoprefixer": "^6.7.6",
     "babel-core": "^6.23.1",
     "babel-loader": "^6.4.0",
     "babel-preset-es2015-webpack": "^6.4.3",
     "concurrently": "^3.4.0",
+    "css-loader": "^0.26.4",
     "git-directory-deploy": "^1.5.1",
     "jstransformer-scss": "^0.1.4",
     "node-sass": "^4.5.0",
+    "postcss-cli": "^3.0.0-beta",
+    "postcss-loader": "^1.3.3",
     "pug-cli": "^1.0.0-alpha6",
+    "sass-loader": "^6.0.3",
+    "style-loader": "^0.13.2",
     "webpack": "^2.2.1"
   },
   "scripts": {
     "views": "pug -o public -b src/views src/views/index.pug",
     "views-watch": "pug -Pwo public -b src/views src/views/index.pug",
-    "styles": "node-sass --output-style compressed -o public/css src/style/style.scss",
+    "styles": "node-sass --output-style compressed -o public/css src/style/style.scss && postcss ./public/css/style.css -u autoprefixer -o ./public/css/style.css --no-map",
     "styles-watch": "node-sass -wro public/css src/style/style.scss",
     "scripts": "webpack -p --config webpack.config.js",
     "scripts-watch": "webpack -w --config webpack.config.js",
     "assets": "rsync -vruz assets/ public/",
     "build": "concurrently \"yarn views\" \"yarn styles\" \"yarn scripts -p\" \"yarn assets\"",
-    "start": "concurrently --kill-others \"yarn views-watch\" \"yarn styles-watch\" \"yarn scripts-watch\" \"php -S localhost:8080 -t public\"",
+    "start": "concurrently --kill-others \"yarn views-watch\" \"yarn styles-watch\" \"yarn scripts-watch\" \"php -S 0.0.0.0:8080 -t public\"",
     "deploy": "git-directory-deploy --directory public --branch master"
   },
   "repository": {
