--- a/package.json
+++ b/package.json
@@ -2,25 +2,23 @@
   "name": "emarref.github.io",
   "version": "1.0.0",
   "description": "",
-  "dependencies": {
-    "babel-preset-env": "^1.2.1"
-  },
+  "dependencies": {},
   "devDependencies": {
-    "autoprefixer": "^6.7.6",
-    "babel-core": "^6.26.2",
-    "babel-loader": "^6.4.0",
-    "babel-preset-es2015-webpack": "^6.4.3",
-    "concurrently": "^3.5.1",
-    "css-loader": "^0.26.4",
+    "@babel/core": "^7.13.10",
+    "@babel/preset-env": "^7.13.10",
+    "autoprefixer": "^10.2.5",
+    "babel-loader": "^8.2.2",
+    "concurrently": "^6.0.0",
+    "css-loader": "^5.1.2",
     "git-directory-deploy": "^1.5.1",
-    "jstransformer-scss": "^0.1.4",
-    "node-sass": "^4.13.1",
-    "postcss-cli": "^3.0.0-beta",
-    "postcss-loader": "^1.3.3",
+    "jstransformer-scss": "^1.0.0",
+    "node-sass": "^5.0.0",
+    "postcss-cli": "^8.3.1",
+    "postcss-loader": "^5.1.0",
     "pug-cli": "^1.0.0-alpha6",
-    "sass-loader": "^6.0.7",
-    "style-loader": "^0.13.2",
-    "webpack": "^2.2.1"
+    "sass-loader": "^11.0.1",
+    "style-loader": "^2.0.0",
+    "webpack": "^5.24.4"
   },
   "scripts": {
     "views": "pug -o public -b src/views src/views/index.pug",
