--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,7 @@ jobs:
       - name: Node Environment
         uses: actions/setup-node@v2.1.5
         with:
-          node-version: 12.x
+          node-version: 14
       - name: Install
         run: yarn install
       - name: Deploy
