--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "postcss": "^8.2.8",
     "postcss-cli": "^8.3.1",
     "postcss-loader": "^5.1.0",
+    "pug": "^3.0.2",
     "pug-cli": "^1.0.0-alpha6",
     "sass-loader": "^11.0.1",
     "style-loader": "^2.0.0",
