--- a/package.json
+++ b/package.json
@@ -45,5 +45,8 @@
   "bugs": {
     "url": "https://github.com/emarref/emarref.github.io/issues"
   },
-  "homepage": "https://github.com/emarref/emarref.github.io#readme"
+  "homepage": "https://github.com/emarref/emarref.github.io#readme",
+  "resolutions": {
+    "ecstatic": "^4.1.3"
+  }
 }
