--- a/package.json
+++ b/package.json
@@ -6,12 +6,12 @@
   "devDependencies": {
     "@babel/core": "^7.13.10",
     "@babel/preset-env": "^7.13.10",
+    "@vivaxy/here": "^3.4.1",
     "autoprefixer": "^10.2.5",
     "babel-loader": "^8.2.2",
     "concurrently": "^6.0.0",
     "css-loader": "^5.1.2",
     "git-directory-deploy": "^1.5.1",
-    "http-server": "^0.12.3",
     "jstransformer-scss": "^1.0.0",
     "node-sass": "^5.0.0",
     "postcss": "^8.2.8",
@@ -33,7 +33,8 @@
     "scripts-watch": "webpack -w --config webpack.config.js",
     "assets": "rsync -vruz assets/ public/",
     "build": "concurrently \"yarn run views\" \"yarn run styles\" \"yarn run scripts\" \"yarn run assets\"",
-    "start": "concurrently --kill-others \"yarn run views-watch\" \"yarn run styles-watch\" \"yarn run scripts-watch\" \"yarn run http-server public\"",
+    "start": "concurrently --kill-others \"yarn run views-watch\" \"yarn run styles-watch\" \"yarn run scripts-watch\" \"yarn run serve\"",
+    "serve": "here -d public",
     "deploy": "yarn build && git-directory-deploy --directory public"
   },
   "repository": {
